# Plumas-Text-Editor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: GenerateAppIcons.cmake
include/plumas/core/: Config.hpp  Document.hpp  FileIO.hpp  FileIoTypes.hpp
include/plumas/platform/: FileBackend.hpp  Paths.hpp
include/plumas/ui/: AppState.hpp  Application.hpp  Dialogs.hpp  EditorView.hpp  MainWindow.hpp  Resources.hpp  SearchReplace.hpp  TitleBar.hpp  UiHelpers.hpp  UiShell.hpp
packaging/debian/: LICENSE  build-deb.sh  com.plumas.EditorTexto.metainfo.xml.in  metadata.sh  plumas-editor-texto.desktop  plumas-editor-texto.desktop.in  plumas-text-editor.desktop.in
packaging/macos/: README.md  bundle-app.sh
packaging/windows/: PlumasTextEditor.iss  QA.md  build-installer.sh  bundle-runtime.sh
resources/: plumas.gresource.xml
src/: main.cpp
src/core/: Config.cpp  Document.cpp  FileIO.cpp
src/platform/common/: Paths.cpp
src/platform/posix/: FileBackend.cpp  PathsPosix.cpp
src/platform/win32/: FileBackend.cpp  PathsWin32.cpp
src/ui/: Application.cpp  Dialogs.cpp  EditorView.cpp  MainWindow.cpp  Resources.cpp  SearchReplace.cpp  TitleBar.cpp  UiHelpers.cpp  UiShell.cpp  styles.css
